# cli

./: .gitignore  Cargo.toml  install.sh
.github/workflows/: release.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
src/: cli.rs  client.rs  config.rs  global_config.rs  main.rs  state.rs
src/commands/: auth.rs  collections.rs  init.rs  init_project.rs  link.rs  migration.rs  mod.rs  project.rs  self_host.rs  start.rs  status.rs  typegen.rs
